--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.6.0",
     "react-day-picker": "^8.10.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
